Changed margin on header because the spacing was bugging me.

--- a/public/main.css
+++ b/public/main.css
@@ -3,6 +3,7 @@ header {
   outline-color: white;
   outline-style: double;
   outline-width: thick;
+  margin: 15px 15px 0px 15px;
 }
 
 h1 {
